--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 
+spring.application.name=forex-service
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
+
+
 
